# app-inventor-api

./: .env  .gitignore  .json  Dockerfile  a.sh  conda-lock.yml  credentials.json  environment.yml  example.json  main.py  pixi.toml  pyproject.toml  token.json
app/: custom_logger.py  fetch.py  server.py  tts.py
app/random_temp/: credentials.json  random_temperature.py  token.json
notion-api/: a.py
src/: fetch.py  main.py  server.py  text_to_speech.py
src/notion-api/: a.py
